<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_columnSpan="2"
    android:layout_gravity="fill"
    android:layout_weight="1"
    android:columnCount="2"
    android:orientation="horizontal"
    android:rowCount="4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:gravity="fill"
        android:text="@string/widget" />

    <Button

        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:gravity="fill"
        android:text="@string/ButtonText" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:contentDescription="@string/todo"
        android:gravity="fill"
        android:src="@drawable/flag"
        android:text="@string/widget" />

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginEnd="50dp"
        android:gravity="fill"
        android:text="@string/check" />

    <android.support.v7.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:gravity="fill"
        android:text="@string/switch1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="fill"
        android:hint="@string/hint1"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:inputType="textPersonName" />

</GridLayout>