<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChatRoomActivity"
    android:orientation="vertical">
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0.1dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.9">

        <android.support.v4.widget.SwipeRefreshLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swipeRefresh">

            <ListView
            android:id="@+id/list_msg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:divider="@null"
            android:listSelector="@android:color/transparent"
            android:transcriptMode="alwaysScroll" />

        </android.support.v4.widget.SwipeRefreshLayout>
        / android:layout_marginBottom="@dimen/activity_horizontal_margin"/


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="0.2"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_chat_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/background_floating_material_dark"
            android:text="@string/send"
            android:layout_margin="10dp"

            android:textColor="@color/background_material_light" />

        <EditText
            android:id="@+id/msg_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center"

            android:hint="@string/type_here"
            android:inputType="text"
            android:autofillHints="" />


        <Button
            android:id="@+id/btn_chat_receive"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/background_floating_material_dark"
            android:text="@string/receive"
            android:layout_margin="10dp"
            android:textColor="@color/background_material_light" />


    </LinearLayout>
</LinearLayout>